# ffmeta

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
src/ffmeta/: __init__.py  ffmetadata.py  media.py  serialize.py  services.py  types.py  utils.py  validators.py
src/ffmeta/cli/: __init__.py  app.py  edit.py  helpers.py  prompt.py  style.py  ui.py  utils.py
tests/: __init__.py  test_pytest.py
